--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Predix UI</title>
+    <title>Predix UI px-meta-buttons-design</title>
 
     <!--
       Fast bootstrapping of the webcomponents-lite library. Only loads the library
@@ -71,7 +71,7 @@
     <style>
       html, body {
         margin: 0;
-        padding: 0; 
+        padding: 0;
       }
     </style>
   </head>
