--- a/demo/px-meta-buttons-design-demo.html
+++ b/demo/px-meta-buttons-design-demo.html
@@ -27,7 +27,7 @@
 <!-- N/A -->
 
 <!-- 3: Make HTML Demo -->
-<section data-slot="demoHTML">
+<section slot="demo-html">
 <p>px-button-design</p>
 <button class="btn btn--primary">Label</button>
 
@@ -43,12 +43,12 @@
 </section>
 
 <!-- 4: Set Import Slot -->
-<section data-slot="import">
+<section slot="import">
 @import "px-meta-buttons-design/_meta.buttons.scss";
 </section>
 
 <!-- 5: Set Usage HTML -->
-<section data-slot="usage">
+<section slot="usage">
 <strong>Note:</strong> refer to the dependent libraries below for details on the enable flags, style variables, and actual usage for buttons and button-group components.
 </section>
 
